[package]
name = "sx1268-rs"
version = "0.1.0"
edition = "2024"
authors = ["Johann Li <me@qinka.pro> @Qinka"]
description = "A Rust driver for the SX1268 LoRa module."
repository = "https://github.com/Qinka/sx1268-rs"
keywords = ["embedded", "lora", "sx1268", "rust"]
categories = ["embedded", "communication"]
license = "Apache-2.0"

[dependencies]
defmt = "1.0.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
